--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "mssql": "^8.1.2",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
